--- a/NoteBook/EditElementWindow.xaml
+++ b/NoteBook/EditElementWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:NoteBook"
         mc:Ignorable="d"
-        Title="Edit Element" Height="217.925" Width="412.264">
+        Title="Edit Element" MinWidth="380" MinHeight="200">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*" />
@@ -20,6 +20,6 @@
         <TextBox x:Name="name" Grid.Row="0" Grid.Column="1" VerticalAlignment="Center" Margin="10" />
         <Label Grid.Row="1" Grid.Column="0" HorizontalAlignment="Right" Content="Coef:" VerticalAlignment="Center" />
         <TextBox x:Name="coef" Grid.Row="1" Grid.Column="1" VerticalAlignment="Center" Margin="10" />
-        <Button Content="Validate" Margin="10" Click="Validate" Grid.ColumnSpan="2" Grid.Row="2" />
+        <Button Content="Validate" Margin="10" Click="Validate" Grid.ColumnSpan="2" Grid.Row="2" Style="{StaticResource PrimaryButton}" />
     </Grid>
 </Window>
